--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header{
  text-align: center;
  padding:20px;
  border-bottom: 3px solid #e6e6e6;
- background: url(https://wallpapers.com/images/hd/flowers-nature-pink-flowers-field-sl6x0vxy0hn5pa3i.jpg);
+ background: url(https://i.imgur.com/0f5ng1P.jpeg);
 }
 header .figurinha{
     height:150px;
@@ -190,3 +190,4 @@ form button:hover {
     background: #d78c62;
 
 }
+
