--- a/style.css
+++ b/style.css
@@ -47,11 +47,26 @@ header p{
 
 /*menu personalizado*/
     .menuprincipal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    z-index: 1000; 
+    background-color: #B59F92;
+    text-align: center;
+    padding: 10px 0; 
     list-style-type: none;
     margin:0;
     padding:0;
     background-color: #B59F92;
     text-align: center;
+}
+
+body {
+    background: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    line-height: 1.4;
+    padding-top: 60px; 
 }
 .menuprincipal li{
     display:inline;
@@ -59,9 +74,9 @@ header p{
 }
 .menuprincipal li a{
     color: black;
-            text-decoration: none;
-            padding: 14px 20px;
-            display: inline-block;
+    text-decoration: none;
+    padding: 14px 20px;
+    display: inline-block;
 }
 .menuprincipal li a:hover{
     background-color: #565551;
@@ -137,6 +152,7 @@ footer a{
     list-style-type: none;
     font-weight: bold;
     color:#000000;
+
 }
 
 .rodapé{
@@ -154,16 +170,19 @@ footer a{
   transform: scale(1.1); 
 }
 @media screen and (max-width: 768px) {
-    div.imagens {
+    .imagens {
+        display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    nav ul.menuprincipal {
-        flex-direction: column;
-        gap: 10px;
+    .imagens img {
+        width: 90%;
+        max-width: 300px;
+        max-height: 300px;
     }
 }
+
 
 /*formulario personalizado*/
 .form-section {
@@ -236,4 +255,11 @@ form button:hover {
         grid-template-columns: 1fr; 
         text-align: center;
     }
+}
+.title{
+    text-align: center;
+    margin-top: 20px;
+}
+.subtitle{
+    text-align: center;
 }
