--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ header .figurinha{
     width: 150px;
     border-radius: 50%;
     margin-bottom: 15px;
-    border: 3px solid #e6a27e;
+    border: 3px solid #000000;
 }
 header h1{
     font-family: 'Georgia', serif;
     font-size: 2.5rem;
     margin-bottom: 10px;
-    color: #8b4a2f;
+    color: #632100;
 }
 header p{
     font-size: 1.2rem;
@@ -177,6 +177,7 @@ footer {
   height: 40px;
   border-radius: 5px; 
   transition: transform 0.3s ease;
+  align-items: center;
 }
 
 .rodapé a img.logo-rodape:hover {
@@ -290,4 +291,10 @@ form button:hover {
         font-size: 0.85rem;
         padding: 0 10px;
     }
+}
+
+.logo{
+    width: 90px;
+    height: 90px;
+    display: in
 }
